# csvbro

./: CCCC  Cargo.toml  MANIFEST.in  README.md  app.py  command_parser.py  csv_loader.py  e1e1e1  main.py  pivot_table_creator.py  publication.config  pyproject.toml  setup.cfg  test22  where_clause_handler.py  zxzx
app/: app.py  command_parser.py  dataframe_viewer.py  json_exporter.py  main.py  ui.py  where_clause_handler.py
debian/dists/stable/: Release  Release.gpg  apt-ftparchive.conf
debian/dists/stable/main/binary-amd64/: Packages  overrides.txt
debian/version_build_folders/csvbro_0.0.2-1/DEBIAN/: control
debian/version_build_folders/csvbro_0.0.2-1/usr/lib/csvbro/app/: command_parser.py
debian/version_build_folders/csvbro_0.0.4-1/DEBIAN/: control
debian/version_build_folders/csvbro_0.0.4-1/usr/lib/csvbro/app/: pivot_table_creator.py
debian/version_build_folders/csvbro_0.0.5-1/DEBIAN/: control
debian/version_build_folders/csvbro_0.0.5-1/usr/lib/csvbro/app/: ui.py
src/: config.rs  csv_appender.rs  csv_grouper.rs  csv_inspector.rs  csv_joiner.rs  csv_manager.rs  csv_pivoter.rs  csv_predicter.rs  csv_searcher.rs  csv_tinkerer.rs  csv_transformer.rs  db_connector.rs  main.rs  mod.rs  settings.rs  user_experience.rs  user_interaction.rs
