[package]
name = "csvbro"
version = "0.3.4"
edition = "2021"
authors = ["Ryan Gerard Wilson"]
license = "MIT"
description = "A TRUE command line BRO for csv lovers using unix systems. Memory safe, compiled in RUST. Kiss Microsoft Excel goodbye."

[dependencies]
tokio = { version = "1", features = ["full"] }
calamine = "0.23.1"
chrono = "0.4.31"
fuzzywuzzy = "0.0.2"
rgwml = { path = "/home/rgw/Apps/rgwml" }
rustyline = "13.0.0"
vim_edit = "0.1.1"
serde_json = "1.0.111"
serde = "1.0.195"
async-recursion = "1.0.5"
