[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
setup_requires = fastentrypoints
py_modules =
    csv_loader
    dataframe_viewer
    where_clause_handler
    command_parser
    main
    ui
    json_exporter
    pivot_table_creator
packages = find:
package_dir =
    = app
python_requires = >=3.10

[options.packages.find]
where = app
